--- a/src/com/reeltwo/plot/package.html
+++ b/src/com/reeltwo/plot/package.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-  Provides the basic data components that allow the various types of two dimenional plots to be graphed.
+  Provides the basic data components that allow the various types of two dimensional plots to be graphed.
 </body>
 </html>
