--- a/src/com/reeltwo/plot/ui/package.html
+++ b/src/com/reeltwo/plot/ui/package.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-  Provides mostly swing based ui components to allow graphs to be viewed and saved interactively.
+  Provides mostly swing based user interface components to allow graphs to be viewed and saved interactively.
 </body>
 </html>
