--- a/src/com/reeltwo/plot/demo/package.html
+++ b/src/com/reeltwo/plot/demo/package.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-  Some demo applications showing how to use various RPlot features.
+  Some demo applications showing how to use various plot features.
 </body>
 </html>
